[package]
name = "query_log_replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "9.0", features = ["prettyprint"] }
bytes = "1.0"
clap = "2.34.0"
futures = "0.3"
serde_json = "1.0"
structopt = "0.3.25"
tokio = { version = "1.13" }
prost = "0.9"
influxdb_iox_client = { git = "https://github.com/influxdata/influxdb_iox.git", rev="37c65fc24f2170a8a187cd62d66f1122c0b7b099", features = ["flight"] }
generated_types = { git = "https://github.com/influxdata/influxdb_iox.git", rev="37c65fc24f2170a8a187cd62d66f1122c0b7b099" }


# Not sure why, but these are required to get cargo to be happy with
# dependencies for some reason due to 'workspace-hack'
rand = "=0.8.4"
sqlx-core = "=0.5.10"
